@@ -5,19 +5,16 @@ import com.lostsidewalk.cultivator.SensorDefinition;
 import com.lostsidewalk.cultivator.app.CultivatorConfigProperties;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 
+import static java.util.Collections.singletonMap;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.when;
 import static org.mockito.MockitoAnnotations.openMocks;
-import static org.springframework.http.HttpStatus.OK;
 
 class SensorControllerTest {
 
@@ -27,60 +24,44 @@ class SensorControllerTest {
     @Mock
     private MonitorService monitorService;
 
-    @InjectMocks
     private SensorController sensorController;
 
     @BeforeEach
     void setUp() {
         openMocks(this);
+        sensorController = new SensorController();
+        sensorController.configProperties = configProperties;
+        sensorController.monitorService = monitorService;
     }
 
     @Test
     void testGetSensorDefinitions() {
-        List<SensorDefinition> expectedDefinitions = Arrays.asList(
-                new SensorDefinition("sensor1", "Sensor 1", 0),
-                new SensorDefinition("sensor2", "Sensor 2", 1)
-        );
+        SensorDefinition sensorDefinition = new SensorDefinition();
+        sensorDefinition.setName("TestSensor");
+        List<SensorDefinition> sensorDefinitions = List.of(sensorDefinition);
+        when(configProperties.getSensorDefinitions()).thenReturn(sensorDefinitions);
 
-        when(configProperties.getSensorDefinitions()).thenReturn(expectedDefinitions);
+        ResponseEntity<List<SensorDefinition>> responseEntity = sensorController.getSensorDefinitions();
 
-        ResponseEntity<List<SensorDefinition>> response = sensorController.getSensorDefinitions();
-
-        assertEquals(OK, response.getStatusCode());
-        assertEquals(expectedDefinitions, response.getBody());
-
-        verify(configProperties, times(1)).getSensorDefinitions();
-        verifyNoMoreInteractions(configProperties);
+        assertEquals(sensorDefinitions, responseEntity.getBody());
     }
 
     @Test
-    void testGetCurrentValue_ExistingSensor() {
-        String sensorName = "sensor1";
-        Object expectedValue = 25.5;
+    void testGetCurrentValues() {
+        Map<String, Object> currentValues = singletonMap("TestSensor", 25.0);
+        when(monitorService.getSensorState()).thenReturn(currentValues);
 
-        when(monitorService.getSensorValue(sensorName)).thenReturn(expectedValue);
+        ResponseEntity<Map<String, ?>> responseEntity = sensorController.getCurrentValues();
 
-        ResponseEntity<?> response = sensorController.getCurrentValue(sensorName);
-
-        assertEquals(OK, response.getStatusCode());
-        assertEquals(expectedValue, response.getBody());
-
-        verify(monitorService, times(1)).getSensorValue(sensorName);
-        verifyNoMoreInteractions(monitorService);
+        assertEquals(currentValues, responseEntity.getBody());
     }
 
     @Test
-    void testGetCurrentValue_NonexistentSensor() {
-        String sensorName = "sensor3";
+    void testGetCurrentValue() throws MonitorService.SensorNotFoundException {
+        when(monitorService.getSensorValue("TestSensor")).thenReturn(25.0);
 
-        when(monitorService.getSensorValue(sensorName)).thenReturn(null);
+        ResponseEntity<?> responseEntity = sensorController.getCurrentValue("TestSensor");
 
-        ResponseEntity<?> response = sensorController.getCurrentValue(sensorName);
-
-        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-        assertNull(response.getBody());
-
-        verify(monitorService, times(1)).getSensorValue(sensorName);
-        verifyNoMoreInteractions(monitorService);
+        assertEquals(25.0, responseEntity.getBody());
     }
 }
